# AtlasLOB

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
cmake/: AtlasDependencies.cmake  AtlasSanitizers.cmake  AtlasWarnings.cmake
docs/: differential-testing.md  semantics.md
docs/decisions/: 0000-template.md  0001-core-semantics.md  0002-command-sequencing-and-identity.md  0003-stable-order-storage-and-price-levels.md  0004-ordered-book-sides.md  0005-indexed-order-book-and-cancellation.md  0006-command-admission-and-execution-preparation.md  0007-atomic-new-and-cancel-execution.md  0008-atomic-replace-and-public-engine.md  0009-canonical-deterministic-evidence.md  0010-independent-python-oracle-boundary.md
docs/journal/: 2026-07-22-domain-contract.md  2026-07-22-foundation.md  2026-07-23-indexed-order-book-planning.md  2026-07-23-ordered-book-sides.md  2026-07-23-stable-levels.md  2026-07-24-deterministic-matching-evidence.md  2026-07-24-execution-foundation.md  2026-07-24-new-cancel-execution.md  2026-07-24-phase2-hardening.md  2026-07-24-python-oracle-foundation.md  2026-07-24-replace-public-engine.md
examples/: domain-valid.commands  engine-demo.commands
include/atlaslob/: book_snapshot.hpp  digest.hpp  matching_engine.hpp
include/atlaslob/domain/: commands.hpp  event_batch.hpp  events.hpp  types.hpp  validation.hpp
python/src/atlaslob/: __init__.py  canonical.py  domain.py  native.py  reference.py
python/tests/: test_canonical.py  test_domain.py  test_native.py  test_native_hardening.py  test_parity.py  test_reference.py  test_reference_hardening.py
src/cli/: domain_fixture.cpp  domain_fixture.hpp  domain_fixture_formatter.cpp  domain_fixture_formatter.hpp  domain_fixture_parser.cpp  domain_fixture_parser.hpp  engine_fixture.cpp  engine_fixture.hpp  main.cpp
src/core/: active_order_index.cpp  active_order_index.hpp  book_side.cpp  book_side.hpp  canonical_digest.cpp  canonical_digest.hpp  checked_arithmetic.hpp  command_admission.cpp  command_admission.hpp  command_executor.cpp  command_executor.hpp  command_sequencer.hpp  event_batch_builder.cpp  event_batch_builder.hpp  execution_policy.hpp  execution_projection.cpp  execution_projection.hpp  instrument_book.cpp  instrument_book.hpp  match_plan.cpp  match_plan.hpp  matching_engine.cpp  order_node.hpp  order_storage.cpp  order_storage.hpp  price_level.cpp  price_level.hpp  snapshot_sequence.hpp  state_validation.cpp  state_validation.hpp  top_of_book.hpp
src/domain/: validation.cpp
tests/differential/: native_driver.cpp  native_driver.hpp
tests/integration/: domain_fixture_test.cpp  engine_fixture_test.cpp  native_cli_test.cmake  native_diff_driver_test.cpp
tests/integration/fixtures/: domain_invalid.commands  domain_invalid.expected  engine_parse_error.commands  engine_parse_error.expected  engine_rejected.commands  engine_rejected.expected  engine_valid.commands  engine_valid.expected  parse_error.commands  parse_error.expected  valid.expected
tests/stress/: instrument_book_stress_test.cpp  matching_engine_model_stress_test.cpp  price_level_stress_test.cpp
tests/support/: core_test_access.hpp
tests/unit/: core_active_order_index_test.cpp  core_book_side_test.cpp  core_canonical_digest_test.cpp  core_checked_arithmetic_test.cpp  core_command_admission_test.cpp  core_command_executor_smoke_test.cpp  core_command_executor_test.cpp  core_event_batch_builder_test.cpp  core_execution_projection_test.cpp  core_execution_replace_projection_test.cpp  core_instrument_book_batch_mutation_test.cpp  core_instrument_book_prepared_rest_test.cpp  core_instrument_book_replace_transaction_test.cpp  core_instrument_book_test.cpp  core_match_plan_test.cpp  core_matching_engine_test.cpp  core_order_storage_test.cpp  core_price_level_test.cpp  domain_event_batch_test.cpp  domain_events_test.cpp  domain_validation_test.cpp
