[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlaslob"
version = "0.1.0"
description = "Independent Python correctness oracle for the AtlasLOB matching engine"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Lucas" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "hypothesis==6.160.0",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[tool.setuptools]
package-dir = { "" = "python/src" }

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.setuptools.package-data]
atlaslob = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["python/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"python/tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["python/src", "python/tests"]
